--- a/JoseQuintanaProyecto_2.ipynb
+++ b/JoseQuintanaProyecto_2.ipynb
@@ -6,7 +6,7 @@
       "name": "JoseQuintanaProyecto_2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNdtJHMF+fE9I5APP1whtTd",
+      "authorship_tag": "ABX9TyNtfdpmAuZMi0Gcn4sqi5gN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4350,6 +4350,34 @@
             "tags": []
           },
           "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wJavKvT12wvu",
+        "outputId": "f5a1eb6a-d433-4657-efe6-dd1f241030a6"
+      },
+      "source": [
+        "df_out.shape"
+      ],
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(78429, 11)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 112
         }
       ]
     },
